--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "vue": "^2.6.10",
+    "bootstrap": "^5.0.1",
+    "bootstrap-vue": "^2.21.2",
+    "vue": "^2.6.12",
     "vue-class-component": "^7.0.2",
     "vue-property-decorator": "^8.1.0"
   },
